# openRE

./: pyproject.toml
celiaproblem/: makefile
gui/: Richards_FD.py  openRE.py
mathiasproblem/iresonsolution/: Richards.py
mathiasproblem/mathiassolution/: HorizontalInfiltrationModel.m
